--- a/contents/log.html
+++ b/contents/log.html
@@ -24,6 +24,7 @@
             <p>
                 日記的な使い方をしたい。
             </p>
+            <h5><a href="..\contents\logs\2025.html">2025総括</h5></a>
     </main>
 
 <script>
