--- a/contents/aqualist/aquatoto.html
+++ b/contents/aqualist/aquatoto.html
@@ -29,7 +29,7 @@
             <div class="two-column">
                 <div class="col-text">
                     <p>
-                        &emsp;岐阜県各務原市にある大きめの水族館。世界淡水魚水族館の名前の通り、様々な国の淡水魚がいる。<br>
+                        &emsp;岐阜県各務原市にある大きめの水族館。世界淡水魚水族館という名前の通り、様々な国の淡水魚がいる。<br>
                         淡水魚専門の水族館では最大級の規模を誇る。
                     </p>
                 </div>
