--- a/contents/home.html
+++ b/contents/home.html
@@ -27,8 +27,7 @@
         <div class="two-column">
           <div class="col-text">
             <p>
-              まずこのサイト自体を公開するか悩んでいて、これは記事の内容を自分の生活に寄せていくのか、それとも身バレしない程度には話して書くのか、ということです。<br />
-              サイト自体をつくろうというのも、フォロワーからかなりの影響を受けているわけです。
+              記事の内容を自分の生活に寄せていくのか、それとも身バレしない程度には話して書くのか、ちょっと悩んでいる。<br />
             </p>
           </div>
 
