--- a/contents/aquariums.html
+++ b/contents/aquariums.html
@@ -32,25 +32,21 @@
             <h3>訪れた水族館一覧</h3>
             <ul>
                 <h4>国内</h4>
-                <h5>岐阜県</h5>
-                <a href="/contents/aqualist/aquatoto.html"><li>アクア・トト</li></a>
-                <h5>愛知県</h5>
-                <li>名古屋港水族館</li>
                 <h5>北海道</h5>
                 <li>千歳水族館</li>
                 <li>新さっぽろサンピアザ水族館</li>
                 <li>さけ科学館</li>
-                <h5>京都府</h5>
-                <li>京都水族館</li>
                 <h5>山梨県</h5>
                 <li>富士湧き水の里水族館</li>
+                <h5>岐阜県</h5>
+                <a href="/contents/aqualist/aquatoto.html"><li>アクア・トト</li></a>
+                <h5>愛知県</h5>
+                <li>名古屋港水族館</li>
+                <li>碧南海浜水族館</li>
+                <h5>京都府</h5>
+                <li>京都水族館</li>
                 <h5>滋賀県</h5>
-                    <li>琵琶湖博物館</li>
-                </div>
-                <div class="col-media">
-                    <div class="img-placeholder" style="height: 200px;">
-                        [ Image ]
-                    </div>
+                <li>琵琶湖博物館</li>
                 </div>
         </div>
             <article>
