--- a/contents/aquariums.html
+++ b/contents/aquariums.html
@@ -29,28 +29,61 @@
                 &emsp;日本では「水族館」と「アクアリウム」が使い分けられているかと思います。英語の授業なんかで水族館を訳すときに違和感を覚えたりもしましたが、これは十九世紀あたりに日本に水族館
                 (当時はfish house,日本語では観魚室)が導入され普及した際、個人で水槽を所有したり観賞したりする文化と差別化するため(されたため？)分かれているようです。なので英語でAquariumといえば水族館を指すのではないでしょうか。
             </p>
-            <h3>訪れた水族館一覧</h3>
-            <ul>
-                <h4>国内</h4>
-                <h5>北海道</h5>
-                <li>千歳水族館</li>
-                <li>新さっぽろサンピアザ水族館</li>
-                <li>さけ科学館</li>
-                <h5>山梨県</h5>
-                <li>富士湧き水の里水族館</li>
-                <h5>岐阜県</h5>
-                <a href="/contents/aqualist/aquatoto.html"><li>アクア・トト</li></a>
-                <h5>愛知県</h5>
-                <li>名古屋港水族館</li>
-                <li>碧南海浜水族館</li>
-                <h5>京都府</h5>
-                <li>京都水族館</li>
-                <h5>滋賀県</h5>
-                <li>琵琶湖博物館</li>
-                </div>
-        </div>
-            <article>
+    <div class="japan-map-container">
+
+    <div class="area-box hokkaido-tohoku">
+        <h5>北海道・東北</h5>
+        <ul>
+            <li>千歳水族館</li>
+            <li>新さっぽろサンピアザ水族館</li>
+            <li>さけ科学館</li>
+        </ul>
+    </div>
+
+    <div class="area-box kanto">
+        <h5>関東</h5>
+        <ul>
+            <li>（未訪問）</li>
+        </ul>
+    </div>
+
+    <div class="area-box chubu">
+        <h5>中部</h5>
+        <ul>
+            <li><strong>山梨:</strong> 富士湧き水の里水族館</li>
+            <li><strong>岐阜:</strong> <a href="/contents/aqualist/aquatoto.html">アクア・トト</a></li>
+            <li><strong>愛知:</strong> 名古屋港水族館</li>
+            <li><strong>愛知:</strong> 碧南海浜水族館</li>
+        </ul>
+    </div>
+
+    <div class="area-box kinki">
+        <h5>近畿</h5>
+        <ul>
+            <li><strong>京都:</strong> 京都水族館</li>
+            <li><strong>滋賀:</strong> 琵琶湖博物館</li>
+        </ul>
+    </div>
+
+    <div class="area-box chugoku-shikoku">
+        <h5>中国・四国</h5>
+        <ul>
+            <li>（未訪問）</li>
+        </ul>
+    </div>
+
+    <div class="area-box kyushu">
+        <h5>九州・沖縄</h5>
+        <ul>
+            <li>（未訪問）</li>
+        </ul>
+    </div>
+
+</div>
+
+    </article>
     </main>
+
 
 <script>
         // ページの順番定義（子ページも含める）
