--- a/contents/log.html
+++ b/contents/log.html
@@ -88,6 +88,12 @@
 
             <ul class="diary-grid">
                 <li class="diary-card">
+                    <a href="diary/2026-01-11.html">
+                        <div class="diary-date">2026-01-11</div>
+                        <div class="diary-title">の日記</div>
+                    </a>
+                </li>
+                <li class="diary-card">
                     <a href="diary/2025-12-18.html">
                         <div class="diary-date">2025-12-18</div>
                         <div class="diary-title">の日記</div>
